# optimal_power_time_calculator_web

./: .gitignore  Dockerfile  compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yaml
optimal_power_time_calculator/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
web/: admin.py  models.py  views.py
web/migrations/: 0001_initial.py
