[tool.poetry]
name = "Optimal Power Time Calculator"
version = "0.1.0"
description = "A tool for finding the best time to start the dishwasher."
authors = ["Stefan Micheelsen"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
gunicorn = "^23.0.0"
python = "^3.12"
django = "^5.1.1"
requests = "^2.32.3"
